--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <div class="card">
         <h1>Nicollas e seu paladar</h1>
-        <img src="https://media.istockphoto.com/id/938742222/pt/foto/cheesy-pepperoni-pizza.jpg" alt="">
+        <img src="Supreme_pizza.jpg" alt="" height="500px">
         <h2>
             Meu paladar não é muito exigente.
             É meio infantil, meio normal.
